--- a/worksbynrfz/igra3.html
+++ b/worksbynrfz/igra3.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Friends Forever Logo Design</title>
+  <title>How To Use TimeTree Infographic</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -47,7 +47,7 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="https://i.imgur.com/FvSOI1R.png" alt="">
+                  <img src="https://i.imgur.com/vrY4q9w.png" alt="">
                 </div>
 
               </div>
@@ -59,16 +59,18 @@
             <div class="portfolio-info">
               <h3><i class="fa-solid fa-circle-info"></i>&nbsp;&nbsp;Project Information</h3>
               <ul>
-                <li><strong><i class="fa-solid fa-list"></i>&nbsp;&nbsp;Category</strong>: Logo Design</li>
-                <li><strong><i class="fa-solid fa-calendar-days"></i>&nbsp;&nbsp;Project Year</strong>: 2017</li>
+                <li><strong><i class="fa-solid fa-list"></i>&nbsp;&nbsp;Category</strong>: Infographic Design</li>
+                <li><strong><i class="fa-solid fa-calendar-days"></i>&nbsp;&nbsp;Project Year</strong>: 2023</li>
                 <!-- <li><strong>Project URL</strong>: <a href="#"></a></li> -->
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>Friends Forever Logo Design</h2>
+              <h2>How To Use TimeTree Infographic</h2>
               <p>
-                A submission for a logo competition based on the theme "Friends Forever", conducted by ITE College
-                West's School of Electronics and Infocomm Technology.
+                TimeTree is a shared calendar app that makes it very easy to share and coordinate schedules. Great to
+                monitor unavailability of NSFs/Regulars. Details have been redacted for privacy reasons.<br>
+                <a href="https://drive.google.com/file/d/1JAwwdZ1DZtpb1xlRrICBFnGwgZeQSGi3/view?usp=sharing"
+                  target="_blank">PDF Version</a>
               </p>
             </div>
           </div>
