--- a/worksbynrfz/mrt-signage-rep-s1.html
+++ b/worksbynrfz/mrt-signage-rep-s1.html
@@ -14,7 +14,10 @@
   <link href="../assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-<link href="https://fonts.googleapis.com/css2?family=DM+Sans&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="../assets/vendor/aos/aos.css" rel="stylesheet">
@@ -44,24 +47,25 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="https://i.imgur.com/M29w8Vo.png" alt="">
+                  <img src="https://i.imgur.com/8kqMapx.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="https://i.imgur.com/F6l7ARp.png" alt="">
+                  <img src="https://i.imgur.com/3zmENiN.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="https://i.imgur.com/4waCiFN.png" alt="">
+                  <img src="https://i.imgur.com/WhJMNTk.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="https://i.imgur.com/LDxivRm.png" alt="">
+                  <img src="https://i.imgur.com/4zGJqNP.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="https://i.imgur.com/ov9ektF.png" alt="">
+                  <img src="https://i.imgur.com/3oy7Tcs.png" alt="">
                 </div>
+
 
               </div>
               <div class="swiper-pagination"></div>
@@ -70,17 +74,17 @@
 
           <div class="col-lg-4">
             <div class="portfolio-info">
-              <h3>Project information</h3>
+              <h3><i class="fa-solid fa-circle-info"></i>&nbsp;&nbsp;Project Information</h3>
               <ul>
-                <li><strong>Category</strong>: Concepts & Replications</li>
-                <li><strong>Project Year</strong>: 2023</li>
+                <li><strong><i class="fa-solid fa-list"></i>&nbsp;&nbsp;Category</strong>: Concepts & Replications</li>
+                <li><strong><i class="fa-solid fa-calendar-days"></i>&nbsp;&nbsp;Project Year</strong>: 2023</li>
                 <!-- <li><strong>Project URL</strong>: <a href="#"></a></li> -->
               </ul>
             </div>
             <div class="portfolio-description">
               <h2>MRT Signages Concept/Replications S1</h2>
               <p>
-                An attempt to replicate the new signage designs, as well as to update older signages to the new <a href="https://www.samuel-lim.com/wayfinding-ux">wayfinding system.</a>
+                An attempt to replicate the new signage designs, as well as to update older signages to the new <a href="https://www.samuel-lim.com/signage-system">wayfinding system.</a>
               </p>
             </div>
           </div>
