--- a/worksbynrfz/bus-rep.html
+++ b/worksbynrfz/bus-rep.html
@@ -14,7 +14,10 @@
   <link href="../assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-<link href="https://fonts.googleapis.com/css2?family=DM+Sans&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="../assets/vendor/aos/aos.css" rel="stylesheet">
@@ -44,51 +47,51 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="https://i.imgur.com/8ywrVRn.png" alt="">
+                  <img src="https://i.imgur.com/nVsvbOc.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="https://i.imgur.com/zuFjDjq.png" alt="">
+                  <img src="https://i.imgur.com/EapM0bn.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="https://i.imgur.com/lpl18Vt.png" alt="">
+                  <img src="https://i.imgur.com/5lOMisQ.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="https://i.imgur.com/42vjgxx.png" alt="">
+                  <img src="https://i.imgur.com/kEN3RRE.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="https://i.imgur.com/yPRTwEh.png" alt="">
+                  <img src="https://i.imgur.com/WXqechz.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="https://i.imgur.com/mCthsi1.png" alt="">
+                  <img src="https://i.imgur.com/wN3SMgz.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="https://i.imgur.com/s6nVx48.png" alt="">
+                  <img src="https://i.imgur.com/J3a5adm.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="https://i.imgur.com/oiteBG1.png" alt="">
+                  <img src="https://i.imgur.com/QrNO40C.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="https://i.imgur.com/IqV0yEw.png" alt="">
+                  <img src="https://i.imgur.com/mKJwmJv.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="https://i.imgur.com/bjOY51a.png" alt="">
+                  <img src="https://i.imgur.com/sHmXRta.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="https://i.imgur.com/SS0c6Xx.png" alt="">
+                  <img src="https://i.imgur.com/0kbY0mU.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="https://i.imgur.com/QCzF6EY.png" alt="">
+                  <img src="https://i.imgur.com/5jSrgHm.png" alt="">
                 </div>
 
 
@@ -99,10 +102,10 @@
 
           <div class="col-lg-4">
             <div class="portfolio-info">
-              <h3>Project information</h3>
+              <h3><i class="fa-solid fa-circle-info"></i>&nbsp;&nbsp;Project Information</h3>
               <ul>
-                <li><strong>Category</strong>: Concepts & Replications</li>
-                <li><strong>Project Year</strong>: 2021-2022</li>
+                <li><strong><i class="fa-solid fa-list"></i>&nbsp;&nbsp;Category</strong>: Concepts & Replications</li>
+                <li><strong><i class="fa-solid fa-calendar-days"></i>&nbsp;&nbsp;Project Year</strong>: 2021-2022</li>
                 <!-- <li><strong>Project URL</strong>: <a href="#"></a></li> -->
               </ul>
             </div>
