--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <nav id="navbar" class="navbar nav-menu">
       <ul>
         <li><a href="#hero" class="nav-link scrollto active"><i class="fa-solid fa-house"></i><span>Home</span></a></li>
-        <li><a href="#about-me" class="nav-link scrollto"><i class="fa-solid fa-user"></i><span>About Me</span></a></li>
+        <li><a href="#about-me" class="nav-link scrollto"><i class="fa-solid fa-user" style="padding: 2px;"></i><span>About Me</span></a></li>
         <li><a href="#resume" class="nav-link scrollto"><i class="fa-solid fa-timeline"></i><span>Timelines</span></a></li>
         <li><a href="#portfolio" class="nav-link scrollto"><i class="fa-solid fa-list"></i><span>Works By
               NRFZ</span></a>
@@ -77,7 +77,7 @@
         <a href="https://www.linkedin.com/in/nurafian-zulkifli/" target="_blank" class="media_link" title="LinkedIn">
           <div class="fa-brands fa-linkedin" style="font-size: 32px"></div>
         </a>
-        <a href="mailto:nurafian.bz33@gmail.com" class="media_link" title="Contact me">
+        <a href="mailto:nurafian.bz33@gmail.com" class="media_link" title="Email Me">
           <div class="fa-solid fa-envelope-open" style="font-size: 32px"></div>
         </a>
       </div>
@@ -697,7 +697,6 @@
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
