--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
@@ -34,7 +33,7 @@
 
 <body>
 
-  <!-- ===================================================================== Mobile nav toggle button ===================================================================== -->
+  <!-- ============================================================ Mobile nav toggle button =========================================================== -->
   <i class="bi bi-list mobile-nav-toggle d-lg-none"></i>
 
   <!-- ===================================================================== Header ===================================================================== -->
@@ -44,6 +43,7 @@
       <ul>
         <li><a href="#hero" class="nav-link scrollto active"><i class="fa-solid fa-house"></i><span>Home</span></a></li>
         <li><a href="#about-me" class="nav-link scrollto"><i class="fa-solid fa-user" style="padding: 2px;"></i><span>About Me</span></a></li>
+        <li><a href="#skills" class="nav-link scrollto"><i class="fa-solid fa-chart-bar"></i><span>Skills</span></a></li>
         <li><a href="#resume" class="nav-link scrollto"><i class="fa-solid fa-timeline"></i><span>Timelines</span></a></li>
         <li><a href="#portfolio" class="nav-link scrollto"><i class="fa-solid fa-list"></i><span>Works By
               NRFZ</span></a>
@@ -53,7 +53,7 @@
 
   </header><!-- End Header -->
 
-  <!-- ===================================================================== Hero Section ===================================================================== -->
+  <!-- ============================================= Hero Section ============================================= -->
   <section id="hero" class="d-flex flex-column justify-content-center">
 
     <div id="centered-container" data-aos="fade-up">
@@ -64,8 +64,7 @@
         <a href="https://github.com/nurafianZulkifli" target="_blank" class="media_link" title="GitHub">
           <div class="fa-brands fa-github" style="font-size: 32px"></div>
         </a>
-
-        <a href="https://twitter.com/_nrf_z" target="_blank" class="media_link" title="X (Twitter)">
+        <a href="https://twitter.com/nrfzlkf_" target="_blank" class="media_link" title="X (Twitter)">
           <div class="fa-brands fa-x-twitter" style="font-size: 32px"></div>
         </a>
         <a href="https://www.facebook.com/Nrfnzlkf/" target="_blank" class="media_link" title="Facebook">
@@ -87,7 +86,7 @@
 
   <main id="main">
 
-    <!-- ===================================================================== About Me Section ===================================================================== -->
+    <!-- ========================================== About Me Section ========================================== -->
     <section id="about-me" class="about-me">
       <div class="container" data-aos="fade-up">
 
@@ -173,7 +172,7 @@
       </div>
     </section>
 
-    <!-- ===================================================================== Skills Section ===================================================================== -->
+    <!-- ========================================== Skills Section ========================================== -->
     <section id="skills" class="skills section-bg">
       <div class="container" data-aos="fade-up">
 
@@ -282,7 +281,7 @@
       </div>
     </section><!-- End Skills Section -->
 
-    <!-- ===================================================================== Resume Section ===================================================================== -->
+    <!-- ================================================ Resume Section ================================================ -->
     <section id="resume" class="resume">
       <div class="container" data-aos="fade-up">
 
@@ -383,14 +382,14 @@
       </div>
     </section><!-- End Resume Section -->
 
-    <!-- ===================================================================== Portfolio Section ===================================================================== -->
+    <!-- ==================================== Portfolio Section ==================================== -->
     <section id="portfolio" class="portfolio section-bg">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
           <h2><i class="fa-solid fa-list"></i>&nbsp;&nbsp;Works By NRFZ</h2>
           <p>A collection of works I have done over the years. Some are commisioned, some are just passion projects. My
-            huge interests are illustrations, like signages, vehicles and wirerames.</p>
+            huge interests are illustrations, like signages, vehicles and wireframes.</p>
         </div>
 
         <div class="row">
@@ -416,7 +415,7 @@
                 <p>Infographic Design</p>
                 <div class="portfolio-links">
                   <a href="https://i.imgur.com/FW5cI8r.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
-                    title="Train Delays Checker V2"><i class="fa-solid fa-magnifying-glass-plus"></i></a>
+                    title="How To Use TimeTree Infographic"><i class="fa-solid fa-magnifying-glass-plus"></i></a>
                   <a href="worksbynrfz/igra3.html" class="portfolio-details-lightbox"
                     data-glightbox="type: external" title="Work Details"><i class="fa-solid fa-circle-info"></i></a>
                 </div>
@@ -568,6 +567,22 @@
             </div>
           </div>
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-id">
+            <div class="portfolio-wrap">
+              <img src="https://i.imgur.com/0cL7BPm.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Hydration Regime Infographic</h4>
+                <p>Infographic Design</p>
+                <div class="portfolio-links">
+                  <a href="https://i.imgur.com/0cL7BPm.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                    title="MRT Signages Concept/Replications S1"><i class="fa-solid fa-magnifying-glass-plus"></i></a>
+                  <a href="worksbynrfz/hydrationreg.html" class="portfolio-details-lightbox"
+                    data-glightbox="type: external" title="Work Details"><i class="fa-solid fa-circle-info"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
           <div class="col-lg-4 col-md-6 portfolio-item filter-cr">
             <div class="portfolio-wrap">
               <img src="https://i.imgur.com/XWWpWCJ.png" class="img-fluid" alt="">
@@ -685,8 +700,7 @@
   </footer><!-- End Footer -->
 
   <div id="preloader"></div>
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
-      class="bi bi-arrow-up-short"></i></a>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="fa-solid fa-arrow-up" style="font-size: 20px;"></i></a>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
@@ -695,7 +709,6 @@
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
 
   <!-- Template Main JS File -->
