--- a/worksbynrfz/hydrationreg.html
+++ b/worksbynrfz/hydrationreg.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Food Review Compiler/Flashify - a Flashcard App </title>
+  <title>Hydration Regime Infographic</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -46,11 +46,7 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="https://i.imgur.com/H9na1Km.png" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="https://i.imgur.com/3I605qM.png" alt="">
+                  <img src="https://i.imgur.com/19W6L4q.png" alt="">
                 </div>
 
               </div>
@@ -62,17 +58,15 @@
             <div class="portfolio-info">
               <h3><i class="fa-solid fa-circle-info"></i>&nbsp;&nbsp;Project Information</h3>
               <ul>
-                <li><strong><i class="fa-solid fa-list"></i>&nbsp;&nbsp;Category</strong>: App Mockups</li>
-                <li><strong><i class="fa-solid fa-calendar-days"></i>&nbsp;&nbsp;Project Year</strong>: 2019 <b>(FRC)</b>, 2020 <b>(FLS)</b></li>
+                <li><strong><i class="fa-solid fa-list"></i>&nbsp;&nbsp;Category</strong>: Infographic Design</li>
+                <li><strong><i class="fa-solid fa-calendar-days"></i>&nbsp;&nbsp;Project Year</strong>: 2022</li>
                 <!-- <li><strong><i class="fa-solid fa-link"&nbsp;&nbsp;></i>Project URL</strong>: <a href="#"></a></li> -->
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>Food Review Compiler/Flashify - a Flashcard App </h2>
+              <h2>Hydration Regime Infographic</h2>
               <p>
-                Food Review Compiler App - A Food Review Compiler App Mockup that compiles all the reviews and suggestions by the community, and arranges them by ratings.
-                <br><br>
-                Flashify - A Flashcard App Mockup with gaming features to make learning fun and exciting.
+                A remake of SAF's Hydration Regime Infographic. <br>
               </p>
             </div>
           </div>
