--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
 
         <div class="section-title">
           <h2><i class="fa-solid fa-list"></i>&nbsp;&nbsp;Works By NRFZ</h2>
-          <p>A collection of works I have done over the years. Some are commisioned, some are just passion projects. My
+          <p>A collection of works I have done over the years. Some are commissioned, some are just passion projects. My
             huge interests are illustrations, like signages, vehicles and wireframes.</p>
         </div>
 
@@ -416,8 +416,7 @@
                 <div class="portfolio-links">
                   <a href="https://i.imgur.com/FW5cI8r.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
                     title="How To Use TimeTree Infographic"><i class="fa-solid fa-magnifying-glass-plus"></i></a>
-                  <a href="worksbynrfz/igra3.html" class="portfolio-details-lightbox"
-                    data-glightbox="type: external" title="Work Details"><i class="fa-solid fa-circle-info"></i></a>
+                  <a href="worksbynrfz/htutt.html"><i class="fa-solid fa-circle-info"></i></a>
                 </div>
               </div>
             </div>
