--- a/worksbynrfz/htutt.html
+++ b/worksbynrfz/htutt.html
@@ -40,7 +40,7 @@
     </section>
 
     <section id="portfolio-details" class="portfolio-details">
-      <div class="container" data-aos="fade-up">
+      <div class="container" data-aos="fade-in">
 
         <div class="row gy-4">
 
@@ -60,7 +60,7 @@
     </section><!-- End Portfolio Details Section -->
 
     <section id="about-me" class="about-me">
-      <div class="container" data-aos="fade-up">
+      <div class="container" data-aos="fade-in">
 
         <div class="row gy-4">
           <div class="col-lg-12">
@@ -69,7 +69,7 @@
 
 
               <div class="row g-2" data-aos-delay="200">
-                <div class="about-item col-lg-4 col-md-4" data-aos="zoom-in">
+                <div class="about-item col-lg-4 col-md-4" data-aos="fade-in">
                   <div class="service-item">
                     <div class="details">
                       <div class="icon">
@@ -82,7 +82,7 @@
                 </div><!-- End Service Item -->
 
 
-                <div class="about-item col-lg-4 col-md-4" data-aos="zoom-in">
+                <div class="about-item col-lg-4 col-md-4" data-aos="fade-in">
                   <div class="service-item">
                     <div class="details">
                       <div class="icon">
@@ -94,7 +94,7 @@
                   </div>
                 </div><!-- End Service Item -->
 
-                <div class="about-item col-lg-4 col-md-4" data-aos="zoom-in">
+                <div class="about-item col-lg-4 col-md-4" data-aos="fade-in">
                   <div class="service-item">
                     <div class="details">
                       <div class="icon">
@@ -121,7 +121,7 @@
 
         <div class="row gy-4">
           <!--  -->
-          <div class="col-lg-8 mx-auto">
+          <div class="col-lg-8 mx-auto" data-aos="fade-in">
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
 
