--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
                 <div class="portfolio-links">
                   <a href="https://i.imgur.com/FW5cI8r.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
                     title="How To Use TimeTree Infographic"><i class="fa-solid fa-magnifying-glass-plus"></i></a>
-                  <a href="worksbynrfz/htutt.html"><i class="fa-solid fa-circle-info"></i></a>
+                  <a href="worksbynrfz/howToTT.html"><i class="fa-solid fa-circle-info"></i></a>
                 </div>
               </div>
             </div>
