--- a/index.html
+++ b/index.html
@@ -431,8 +431,7 @@
                 <div class="portfolio-links">
                   <a href="https://i.imgur.com/3Q3DFDx.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
                     title="Train Delays Checker V2"><i class="fa-solid fa-magnifying-glass-plus"></i></a>
-                  <a href="worksbynrfz/delays-checker.html" class="portfolio-details-lightbox"
-                    data-glightbox="type: external" title="Work Details"><i class="fa-solid fa-circle-info"></i></a>
+                  <a href="worksbynrfz/train-del-checker.html"><i class="fa-solid fa-circle-info"></i></a>
                 </div>
               </div>
             </div>
