--- a/worksbynrfz/train-del-checker.html
+++ b/worksbynrfz/train-del-checker.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>How To Use TimeTree Infographic</title>
+  <title>Train Delays Checker V2</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -47,7 +47,7 @@
           <div class="col-lg-12">
             <div class="portfolio-description">
               <h6><a href="../index.html#portfolio"><i class="fa-solid fa-arrow-left-long"></i>&nbsp;&nbsp;Back to Home</h6></a>
-              <h2>How To Use TimeTree Infographic</h2>
+              <h2>Train Delays Checker V2</h2>
               <p>
                 TimeTree is a shared calendar app that makes it very easy to share and coordinate schedules. Great to
                 monitor unavailability of NSFs/Regulars. Details have been redacted for privacy reasons.<br>
