--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
         <div class="row g-2" data-aos-delay="200">
 
-          <div class="about-item col-lg-12 col-md-12" data-aos="zoom-in">
+          <div class="about-item col-lg-12 col-md-12" data-aos="fade-up">
             <div class="service-item">
               <div class="details">
                 <div class="icon">
@@ -108,7 +108,7 @@
             </div>
           </div>
 
-          <div class="about-item col-lg-4 col-md-4" data-aos="zoom-in">
+          <div class="about-item col-lg-4 col-md-4" data-aos="fade-up">
             <div class="service-item">
               <div class="details">
                 <div class="icon">
@@ -120,7 +120,7 @@
             </div>
           </div><!-- End Service Item -->
 
-          <div class="about-item col-lg-4 col-md-4" data-aos="zoom-in">
+          <div class="about-item col-lg-4 col-md-4" data-aos="fade-up">
             <div class="service-item">
               <div class="details">
                 <div class="icon">
@@ -132,7 +132,7 @@
             </div>
           </div><!-- End Service Item -->
 
-          <div class="about-item col-lg-4 col-md-4" data-aos="zoom-in">
+          <div class="about-item col-lg-4 col-md-4" data-aos="fade-up">
             <div class="service-item">
               <div class="details">
                 <div class="icon">
@@ -144,7 +144,7 @@
             </div>
           </div><!-- End Service Item -->
 
-          <div class="about-item col-lg-4 col-md-4" data-aos="zoom-in">
+          <div class="about-item col-lg-4 col-md-4" data-aos="fade-up">
             <div class="service-item">
               <div class="details">
                 <div class="icon">
@@ -156,7 +156,7 @@
             </div>
           </div><!-- End Service Item -->
 
-          <div class="about-item col-lg-8 col-md-8" data-aos="zoom-in">
+          <div class="about-item col-lg-8 col-md-8" data-aos="fade-up">
             <div class="service-item">
               <div class="details">
                 <div class="icon">
@@ -416,7 +416,8 @@
                 <div class="portfolio-links">
                   <a href="https://i.imgur.com/FW5cI8r.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
                     title="How To Use TimeTree Infographic"><i class="fa-solid fa-magnifying-glass-plus"></i></a>
-                  <a href="worksbynrfz/howToTT.html"><i class="fa-solid fa-circle-info"></i></a>
+                  <a href="worksbynrfz/igra3.html" class="portfolio-details-lightbox"
+                    data-glightbox="type: external" title="Work Details"><i class="fa-solid fa-circle-info"></i></a>
                 </div>
               </div>
             </div>
@@ -431,7 +432,8 @@
                 <div class="portfolio-links">
                   <a href="https://i.imgur.com/3Q3DFDx.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
                     title="Train Delays Checker V2"><i class="fa-solid fa-magnifying-glass-plus"></i></a>
-                  <a href="worksbynrfz/train-del-checker.html"><i class="fa-solid fa-circle-info"></i></a>
+                  <a href="worksbynrfz/delays-checker.html" class="portfolio-details-lightbox"
+                    data-glightbox="type: external" title="Work Details"><i class="fa-solid fa-circle-info"></i></a>
                 </div>
               </div>
             </div>
