--- a/worksbynrfz/igra3.html
+++ b/worksbynrfz/igra3.html
@@ -35,11 +35,39 @@
 
   <main id="main">
 
+    <section id="hero-works">
+      <img src="https://i.imgur.com/bA7WHj2.png">
+    </section>
+
     <!-- ======= Portfolio Details Section ======= -->
     <section id="portfolio-details" class="portfolio-details">
       <div class="container">
+        <div class="row gy-4 justify-content-center">
+          <h6><a href="../index.html#portfolio"><i class="fa-solid fa-arrow-left"></i>&nbsp;&nbsp;Back to Home</h6></a>
+          <div class="col-lg-12">
+            <div class="portfolio-description">
+              <h2>How To Use TimeTree Infographic</h2>
+              <p>
+                TimeTree is a shared calendar app that makes it very easy to share and coordinate schedules. Great to
+                monitor unavailability of NSFs/Regulars. Details have been redacted for privacy reasons.<br>
+              </p>
+            </div>
+          </div>
 
-        <div class="row gy-4">
+          <div class="col-lg-12">
+            <div class="portfolio-info">
+              <h3><i class="fa-solid fa-circle-info"></i>&nbsp;&nbsp;Project Information</h3>
+              <ul>
+                <li><strong><i class="fa-solid fa-list"></i>&nbsp;&nbsp;Category</strong>: Infographic Design</li>
+                <li><strong><i class="fa-solid fa-calendar-days"></i>&nbsp;&nbsp;Project Year</strong>: 2023</li>
+                <li><strong><i class="fa-solid fa-eye"></i>&nbsp;&nbsp;View Project</strong>: <br><br>
+                  <a href="https://drive.google.com/file/d/1JAwwdZ1DZtpb1xlRrICBFnGwgZeQSGi3/view?usp=sharing"
+                  target="_blank"><i class="fa-solid fa-file-pdf"></i>&nbsp;&nbsp;PDF Version</a></li>
+                <!-- <li><strong><i class="fa-solid fa-link"&nbsp;&nbsp;></i>Project URL</strong>: <a href="#"></a></li> -->
+              </ul>
+            </div>
+          </div>
+
 
           <div class="col-lg-8">
             <div class="portfolio-details-slider swiper">
@@ -54,35 +82,14 @@
             </div>
           </div>
 
-          <div class="col-lg-4">
-            <div class="portfolio-info">
-              <h3><i class="fa-solid fa-circle-info"></i>&nbsp;&nbsp;Project Information</h3>
-              <ul>
-                <li><strong><i class="fa-solid fa-list"></i>&nbsp;&nbsp;Category</strong>: Infographic Design</li>
-                <li><strong><i class="fa-solid fa-calendar-days"></i>&nbsp;&nbsp;Project Year</strong>: 2023</li>
-                <!-- <li><strong><i class="fa-solid fa-link"&nbsp;&nbsp;></i>Project URL</strong>: <a href="#"></a></li> -->
-              </ul>
-            </div>
-            <div class="portfolio-description">
-              <h2>How To Use TimeTree Infographic</h2>
-              <p>
-                TimeTree is a shared calendar app that makes it very easy to share and coordinate schedules. Great to
-                monitor unavailability of NSFs/Regulars. Details have been redacted for privacy reasons.<br>
-                <a href="https://drive.google.com/file/d/1JAwwdZ1DZtpb1xlRrICBFnGwgZeQSGi3/view?usp=sharing"
-                  target="_blank">PDF Version</a>
-              </p>
-            </div>
-          </div>
-
         </div>
-
-      </div>
     </section><!-- End Portfolio Details Section -->
 
   </main><!-- End #main -->
 
   <div id="preloader"></div>
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="fa-solid fa-arrow-up" style="font-size: 20px;"></i></a>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="fa-solid fa-arrow-up"
+      style="font-size: 20px;"></i></a>
 
   <!-- Vendor JS Files -->
   <script src="../assets/vendor/purecounter/purecounter_vanilla.js"></script>
