--- a/worksbynrfz/bp12.html
+++ b/worksbynrfz/bp12.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>How To Use TimeTree Infographic</title>
+  <title>New Wayfinding System for BP12 Jelapang</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
