--- a/worksbynrfz/hydrationreg.html
+++ b/worksbynrfz/hydrationreg.html
@@ -34,23 +34,31 @@
 <body>
 
   <main id="main">
-
     <!-- ======= Portfolio Details Section ======= -->
     <section id="portfolio-details" class="portfolio-details">
       <div class="container">
-
-        <div class="row gy-4">
+        <div class="row gy-4 justify-content-center">
+          <div class="col-lg-12">
+            <div class="portfolio-description">
+              <h2>Hydration Regime Infographic</h2>
+              <p>
+                A remake of SAF's Hydration Regime Infographic. <br>
+              </p>
+            </div>
+          </div>
 
           <div class="col-lg-8">
-            <div class="portfolio-details-slider swiper">
-              <div class="swiper-wrapper align-items-center">
+            <div class="portfolio-info">
+              <div class="portfolio-details-slider swiper">
+                <div class="swiper-wrapper align-items-center">
 
-                <div class="swiper-slide">
-                  <img src="https://i.imgur.com/19W6L4q.png" alt="">
+                  <div class="swiper-slide">
+                    <img src="https://i.imgur.com/19W6L4q.png" alt="">
+                  </div>
+
                 </div>
-
+                <div class="swiper-pagination"></div>
               </div>
-              <div class="swiper-pagination"></div>
             </div>
           </div>
 
@@ -60,26 +68,18 @@
               <ul>
                 <li><strong><i class="fa-solid fa-list"></i>&nbsp;&nbsp;Category</strong>: Infographic Design</li>
                 <li><strong><i class="fa-solid fa-calendar-days"></i>&nbsp;&nbsp;Project Year</strong>: 2022</li>
-                <!-- <li><strong><i class="fa-solid fa-link"&nbsp;&nbsp;></i>Project URL</strong>: <a href="#"></a></li> -->
               </ul>
             </div>
-            <div class="portfolio-description">
-              <h2>Hydration Regime Infographic</h2>
-              <p>
-                A remake of SAF's Hydration Regime Infographic. <br>
-              </p>
-            </div>
+            
           </div>
-
         </div>
-
-      </div>
     </section><!-- End Portfolio Details Section -->
 
   </main><!-- End #main -->
 
   <div id="preloader"></div>
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="fa-solid fa-arrow-up" style="font-size: 20px;"></i></a>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="fa-solid fa-arrow-up"
+      style="font-size: 20px;"></i></a>
 
   <!-- Vendor JS Files -->
   <script src="../assets/vendor/purecounter/purecounter_vanilla.js"></script>
