--- a/worksbynrfz/lta-pids.html
+++ b/worksbynrfz/lta-pids.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>More Replications</title>
+  <title>LTA Bus PIDS Redesign</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -34,47 +34,13 @@
 <body>
 
   <main id="main">
-
     <!-- ======= Portfolio Details Section ======= -->
     <section id="portfolio-details" class="portfolio-details">
       <div class="container">
-
-        <div class="row gy-4">
-
-          <div class="col-lg-8">
-            <div class="portfolio-details-slider swiper">
-              <div class="swiper-wrapper align-items-center">
-
-                <div class="swiper-slide">
-                  <img src="https://i.imgur.com/hxIJFLu.png" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="https://i.imgur.com/CNiiiS0.png" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <video width="100%" height="511" controls loop>
-                    <source src="https://imgur.com/k8Qf5C1.mp4" type="video/mp4">
-                  </video>
-                </div>
-
-              </div>
-              <div class="swiper-pagination"></div>
-            </div>
-          </div>
-
-          <div class="col-lg-4">
-            <div class="portfolio-info">
-              <h3><i class="fa-solid fa-circle-info"></i>&nbsp;&nbsp;Project Information</h3>
-              <ul>
-                <li><strong><i class="fa-solid fa-list"></i>&nbsp;&nbsp;Category</strong>: Concepts & Replications</li>
-                <li><strong><i class="fa-solid fa-calendar-days"></i>&nbsp;&nbsp;Project Year</strong>: 2023</li>
-                <!-- <li><strong><i class="fa-solid fa-link"&nbsp;&nbsp;></i>Project URL</strong>: <a href="#"></a></li> -->
-              </ul>
-            </div>
+        <div class="row gy-4 justify-content-center">
+          <div class="col-lg-12">
             <div class="portfolio-description">
-              <h2>More Replications</h2>
+              <h2>LTA Bus PIDS Redesign</h2>
               <p>
                 My take on the redesign of LTA's Bus Passenger Information Display System (PIDS). <br><br>
 
@@ -90,15 +56,48 @@
             </div>
           </div>
 
-        </div>
+          <div class="col-lg-8">
+            <div class="portfolio-info">
+              <div class="portfolio-details-slider swiper">
+                <div class="swiper-wrapper align-items-center">
 
-      </div>
+                  <div class="swiper-slide">
+                    <img src="https://i.imgur.com/hxIJFLu.png" alt="">
+                  </div>
+  
+                  <div class="swiper-slide">
+                    <img src="https://i.imgur.com/CNiiiS0.png" alt="">
+                  </div>
+  
+                  <div class="swiper-slide">
+                    <video width="100%" height="511" controls loop>
+                      <source src="https://imgur.com/k8Qf5C1.mp4" type="video/mp4">
+                    </video>
+                  </div>
+
+                </div>
+                <div class="swiper-pagination"></div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4">
+            <div class="portfolio-info">
+              <h3><i class="fa-solid fa-circle-info"></i>&nbsp;&nbsp;Project Information</h3>
+              <ul>
+                <li><strong><i class="fa-solid fa-list"></i>&nbsp;&nbsp;Category</strong>: Concepts & Replications</li>
+                <li><strong><i class="fa-solid fa-calendar-days"></i>&nbsp;&nbsp;Project Year</strong>: 2023</li>
+              </ul>
+            </div>
+          </div>
+        </div>
     </section><!-- End Portfolio Details Section -->
 
   </main><!-- End #main -->
 
   <div id="preloader"></div>
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="fa-solid fa-arrow-up" style="font-size: 20px;"></i></a>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="fa-solid fa-arrow-up"
+      style="font-size: 20px;"></i></a>
 
   <!-- Vendor JS Files -->
   <script src="../assets/vendor/purecounter/purecounter_vanilla.js"></script>
